--- a/apps/root/index.html
+++ b/apps/root/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Company Landing Page</title>
+    <title>Perp City</title>
     <link rel="stylesheet" href="./src/globals.css" />
     <script type="module" src="./src/index.ts"></script>
   </head>
   <body className="flex min-h-screen flex-col">
     <div id="single-spa-application:header"></div>
     <div id="single-spa-application:content"></div>
-    <div id="single-spa-application:footer"></div>
   </body>
 </html>
